# HuaRenderer

./: CMakeLists.txt  README.md  output.tga
cmake/: CopyFiles.cmake
renderer/: CMakeLists.txt
renderer/src/: main.cpp
renderer/src/CoreLayer/: CMakeLists.txt  MathLib.h  Model.cpp  Model.h  TGAImage.cpp  TGAImage.h  Texture.cpp  Texture.h  Triangle.h  Vertex.h
renderer/src/PresentationLayer/: CMakeLists.txt  present.cpp  present.h
renderer/src/RenderingLayer/: CMakeLists.txt
renderer/src/RenderingLayer/SoftwareRasterizer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
renderer/src/RenderingLayer/SoftwareRayTracer/: Camera.h  Intersectable.h  Material.h  Perlin.h  Ray.h  TGAImage.cpp  TGAImage.h  Texture.h
renderer/test/: CmakeLists.txt  test_SoftwareRasterizer.cpp  test_SoftwareRayTracer.cpp
